# pdfcrate

./: .gitignore  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  pdfcrate.gemspec  pyproject.toml
.github/workflows/: ci.yml  python.yml  ruby.yml  rust.yml
examples/: alpha_demo.rs  cjk_demo.rs  column_box_demo.rs  custom_font_demo.rs  download-fonts.py  drawing_demo.rs  forms_demo.rs  grid_demo.rs  hello_world.rs  inline_format_demo.rs  jpeg_demo.rs  layout_advanced_demo.rs  layout_demo.rs  ligatures_demo.rs  pdf_embed_demo.rs  png_demo.rs  showcase.py  showcase.rs  svg_barcode_demo.rs  text_box_overflow_demo.rs
examples/fonts/: .gitignore
ext/pdfcrate/: Cargo.toml  extconf.rb
ext/pdfcrate/src/: lib.rs
lib/: pdfcrate.rb
lib/pdfcrate/: version.rb
python/pdfcrate/: __init__.py
src/: error.rs  lib.rs  python.rs  wasm.rs
src/api/: color.rs  image.rs  inline_format.rs  layout.rs  link.rs  measurements.rs  mod.rs  outline.rs  page.rs
src/api/table/: cell.rs  mod.rs
src/codec/: mod.rs
src/content/: mod.rs  operators.rs
src/document/: context.rs  embed.rs  loader.rs  mod.rs
src/font/: kern_tables.rs  mod.rs  truetype.rs
src/forms/: appearance.rs  fields.rs  mod.rs
src/image/: mod.rs
src/objects/: array.rs  dict.rs  mod.rs  name.rs  number.rs  reference.rs  stream.rs  string.rs
src/parser/: lexer.rs  mod.rs  parser.rs  xref.rs
src/svg/: mod.rs
src/writer/: mod.rs
tests/: test_column_box.py  test_richtext.py
