[package]
name = "pdfcrate"
version = "0.1.0"
edition = "2021"
description = "A Rust library for creating and manipulating PDF documents"
license = "MIT"
repository = "https://github.com/ratazzi/pdfcrate"
keywords = ["pdf", "document", "generator"]
categories = ["text-processing", "encoding"]

[dependencies]
# Use zlib-rs for SIMD-accelerated pure Rust compression
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
thiserror = "1.0"
log = "0.4"

# Font metrics for PDF standard fonts (AFM data)
pdf-canvas = "0.7"

# Optional dependencies for extended functionality
png = { version = "0.17", optional = true }
ttf-parser = { version = "0.24", optional = true }
rustybuzz = { version = "0.10", optional = true }
subsetter = { version = "0.2", optional = true }

# SVG support
usvg = { version = "0.45", optional = true }

# Barcode support
qrcode = { version = "0.14", optional = true }
barcoders = { version = "2.0", optional = true }

# Color parsing (CSS color strings)
csscolorparser = { version = "0.8", default-features = false, features = ["named-colors"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
pdf-writer = "0.12"
pretty_assertions = "1.0"

[features]
default = ["std", "png", "fonts", "text-shaping", "svg"]
std = []  # Standard library support (file I/O)
fonts = ["ttf-parser", "subsetter"]
text-shaping = ["rustybuzz"]
svg = ["usvg"]
barcode = ["qrcode", "barcoders"]
full = ["std", "png", "fonts", "svg", "barcode"]
