[package]
name = "pdfcrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "A Rust library for creating and manipulating PDF documents"
license = "MIT"
authors = ["ratazzi <ratazzi@gmail.com>"]
repository = "https://github.com/ratazzi/pdfcrate"
homepage = "https://github.com/ratazzi/pdfcrate"
keywords = ["pdf", "document", "generator"]
categories = ["text-processing", "encoding"]

[dependencies]
# Use zlib-rs for SIMD-accelerated pure Rust compression
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
thiserror = "1.0"
log = "0.4"
# Fast and accurate float-to-string conversion
ryu = "1.0"

# Font metrics for PDF standard fonts (AFM data)
pdf-canvas = "0.7"

# Optional dependencies for extended functionality
png = { version = "0.17", optional = true }
ttf-parser = { version = "0.24", optional = true }
rustybuzz = { version = "0.10", optional = true }
subsetter = { version = "0.2", optional = true }

# SVG support
usvg = { version = "0.45", optional = true }

# Barcode support
qrcode = { version = "0.14", optional = true }
barcoders = { version = "2.0", optional = true }

# Inline format parsing (HTML-like tags)
regex = "1"

# Color parsing (CSS color strings)
csscolorparser = { version = "0.8", default-features = false, features = ["named-colors"] }

# Python bindings (optional)
[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py39"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
pdf-writer = "0.12"
pretty_assertions = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[features]
default = ["std", "png", "fonts", "text-shaping", "svg", "barcode"]
std = []  # Standard library support (file I/O)
fonts = ["ttf-parser", "subsetter"]
text-shaping = ["rustybuzz"]
svg = ["usvg"]
barcode = ["qrcode", "barcoders"]
prawn-compat = []  # Skip space kern pairs to match Prawn's WinAnsi encoding behavior
full = ["std", "png", "fonts", "text-shaping", "svg", "barcode"]
python = ["pyo3", "full"]
