[project]
name = "pdfcrate"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Text Processing",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
description = "A fast PDF generation library for Python, written in Rust"
license = "MIT"
authors = [{name = "ratazzi", email = "ratazzi.potts@gmail.com"}]
keywords = ["pdf", "document", "generator", "report"]

[project.urls]
Documentation = "https://github.com/ratazzi/pdfcrate"
Homepage = "https://github.com/ratazzi/pdfcrate"
Repository = "https://github.com/ratazzi/pdfcrate"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov", "pymupdf>=1.24.0"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.4,<2.0",
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
